fix height of logo container and align with flex

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,3 +1,7 @@
+.project-logo-container {
+  height: 140px;
+}
+
 .project-logo {
   max-height: 5rem;
 }
